--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "color-namer": "^1.4.0",
     "lucide-react": "^0.441.0",
     "next": "^14.2.13",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.2",
