--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "color-2-name": "^1.4.4",
     "color-namer": "^1.4.0",
+    "embla-carousel-react": "^8.3.0",
     "lucide-react": "^0.441.0",
     "next": "^14.2.13",
     "next-themes": "^0.3.0",
