--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "lint": "eslint .",
     "start": "next start",
+    "postbuild": "next-sitemap",
     "generate-colors-script": "tsx scripts/generate-colors-json"
   },
   "dependencies": {
@@ -40,6 +41,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "next-sitemap": "^4.2.3",
     "openai": "^4.66.1",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.12",
